Add cartodb-java-client src, escape single quotes in sql.